Supporting a list of images analysis and video analysis
